packages/@winglang/wingc/src/lsp/snapshots/hovers/bring_builtin.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "Namespace 'cloud'"
range:
  start:
    line: 1
    character: 6
  end:
    line: 1
    character: 11

