packages/@winglang/wingc/src/lsp/snapshots/hovers/builtin_in_inflight.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nassert: (condition: bool, message: str?): void\n```\n---\nAsserts that a condition is true"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 10

