packages/@winglang/wingc/src/lsp/snapshots/hovers/builtin_instance_method.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstartsWith(searchString: str): bool\n```\n---\nDoes this string start with the given searchString?\n\n#### Returns\ntrue if string starts with searchString."
range:
  start:
    line: 1
    character: 8
  end:
    line: 1
    character: 18

