packages/@winglang/wingc/src/lsp/snapshots/hovers/class_symbol.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight bucket: class Bucket {\n  addCorsRule(...): void;\n  addFile(...): void;\n  addObject(...): void;\n  onCreate(...): void;\n  onDelete(...): void;\n  onEvent(...): void;\n  /* ... */\n}\n```\n---\nA cloud object store."
range:
  start:
    line: 3
    character: 6
  end:
    line: 3
    character: 12

