packages/@winglang/wingc/src/lsp/snapshots/hovers/ctor_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nnew(): Bob\n```\n---\nI'm bob the constructor"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 7

