packages/@winglang/wingc/src/lsp/snapshots/hovers/ctor_doc_from_new_expr.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nnew(): Bob\n```\n---\nI'm bob the constructor"
range:
  start:
    line: 5
    character: 6
  end:
    line: 5
    character: 9

