packages/@winglang/wingc/src/lsp/snapshots/hovers/inflight_ctor_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\ninflight new(): Bob\n```\n---\nI'm bob the constructor (inflight)"
range:
  start:
    line: 3
    character: 13
  end:
    line: 3
    character: 16

